    for his help eliminating the infestation... for now.)
  * Make test suite not rely on a working cp -pr.
    (The Unix wars are still ON!)
  * Support filenames that start with a dash; when such a file is passed
    to a utility it will be escaped to avoid it being interpreted as an
    option.
  * New backends: SHA512 SHA384 SHA256 SHA224

 -- Joey Hess <joeyh@debian.org>  Sun, 13 Feb 2011 00:48:02 -0400

git-annex (0.21) unstable; urgency=low

  * test: Don't rely on chmod -R working.
  * unannex: Fix recently introduced bug when attempting to unannex more
    than one file at a time.
  * test: Set git user name and email in case git can't guess values.
  * Fix display of unicode filenames.

 -- Joey Hess <joeyh@debian.org>  Fri, 11 Feb 2011 23:21:08 -0400

git-annex (0.20) unstable; urgency=low

  * Preserve specified file ordering when instructed to act on multiple
    files or directories. For example, "git annex get a b" will now always
    get "a" before "b". Previously it could operate in either order.
  * unannex: Commit staged changes at end, to avoid some confusing behavior
    with the pre-commit hook, which would see some types of commits after
    an unannex as checking in of an unlocked file.
  * map: New subcommand that uses graphviz to display a nice map of
    the git repository network.
  * Deal with the mtl/monads-fd conflict.
  * configure: Check for sha1sum.

 -- Joey Hess <joeyh@debian.org>  Tue, 08 Feb 2011 18:57:24 -0400

git-annex (0.19) unstable; urgency=low

  * configure: Support using the uuidgen command if the uuid command is
    not available.
  * Allow --exclude to be specified more than once.
  * There are now three levels of repository trust.
  * untrust: Now marks the current repository as untrusted.
  * semitrust: Now restores the default trust level. (What untrust used to do.)
  * fsck, drop: Take untrusted repositories into account.
  * Bugfix: Files were copied from trusted remotes first even if their