@@ -9,6 +9,7 @@ git-annex (0.22) UNRELEASED; urgency=low
     to a utility it will be escaped to avoid it being interpreted as an
     option.
   * New backends: SHA512 SHA384 SHA256 SHA224
+  * fsck: Check for and repair location log damage.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 13 Feb 2011 00:48:02 -0400
 
